# r7_macro_checker

./: README.md  onlyoffice-macro-cli
client/: client.py
examples/: engine-test.js  error-examples.js  parameterized-macro.js  spreadsheet-example.js  syntax-test.js
examples/Api/Methods/: AddComment_macroR7.js  AddCustomFunction_macroR7.js  AddDefName_macroR7.js  AddSheet_macroR7.js  ClearCustomFunctions_macroR7.js  CreateBlipFill_macroR7.js  CreateBullet_macroR7.js  CreateColorByName_macroR7.js  CreateColorFromRGB_macroR7.js  CreateGradientStop_macroR7.js  CreateLinearGradientFill_macroR7.js  CreateNewHistoryPoint_macroR7.js  CreateNoFill_macroR7.js  CreateNumbering_macroR7.js  CreateParagraph_macroR7.js  CreatePatternFill_macroR7.js  CreatePresetColor_macroR7.js  CreateRGBColor_macroR7.js  CreateRadialGradientFill_macroR7.js  CreateRun_macroR7.js  CreateSchemeColor_macroR7.js  CreateSolidFill_macroR7.js  CreateStroke_macroR7.js  CreateTextPr_macroR7.js  Format_macroR7.js  GetActiveSheet_macroR7.js  GetAllComments_macroR7.js  GetAllPivotTables_macroR7.js  GetCommentById_macroR7.js  GetComments_macroR7.js  GetCore_macroR7.js  GetCustomProperties_macroR7.js  GetDefName_macroR7.js  GetDocumentInfo_macroR7.js  GetFreezePanesType_macroR7.js  GetFullName_macroR7.js  GetLocale_macroR7.js  GetMailMergeData_macroR7.js  GetPivotByName_macroR7.js  GetRange_macroR7.js  (+21 more)
examples/ApiAreas/Methods/: GetCount_macroR7.js  GetItem_macroR7.js  GetParent_macroR7.js
examples/ApiBullet/Methods/: GetClassType_macroR7.js
examples/ApiCharacters/Methods/: Delete_macroR7.js  GetCaption_macroR7.js  GetCount_macroR7.js  GetFont_macroR7.js  GetParent_macroR7.js  GetText_macroR7.js  Insert_macroR7.js  SetCaption_macroR7.js  SetText_macroR7.js
examples/ApiChart/Methods/: AddSeria_macroR7.js  ApplyChartStyle_macroR7.js  GetAllSeries_macroR7.js  GetClassType_macroR7.js  GetSeries_macroR7.js  RemoveSeria_macroR7.js  SetAxieNumFormat_macroR7.js  SetCatFormula_macroR7.js  SetDataPointFill_macroR7.js  SetDataPointOutLine_macroR7.js  SetHorAxisLablesFontSize_macroR7.js  SetHorAxisMajorTickMark_macroR7.js  SetHorAxisMinorTickMark_macroR7.js  SetHorAxisOrientation_macroR7.js  SetHorAxisTickLabelPosition_macroR7.js  SetHorAxisTitle_macroR7.js  SetLegendFill_macroR7.js  SetLegendFontSize_macroR7.js  SetLegendOutLine_macroR7.js  SetLegendPos_macroR7.js  SetMajorHorizontalGridlines_macroR7.js  SetMajorVerticalGridlines_macroR7.js  SetMarkerFill_macroR7.js  SetMarkerOutLine_macroR7.js  SetMinorHorizontalGridlines_macroR7.js  SetMinorVerticalGridlines_macroR7.js  SetPlotAreaFill_macroR7.js  SetPlotAreaOutLine_macroR7.js  SetSeriaName_macroR7.js  SetSeriaValues_macroR7.js  SetSeriaXValues_macroR7.js  SetSeriesFill_macroR7.js  SetSeriesOutLine_macroR7.js  SetShowDataLabels_macroR7.js  SetShowPointDataLabel_macroR7.js  SetTitleFill_macroR7.js  SetTitleOutLine_macroR7.js  SetTitle_macroR7.js  SetVerAxisOrientation_macroR7.js  SetVerAxisTitle_macroR7.js  (+4 more)
examples/ApiChartSeries/Methods/: ChangeChartType_macroR7.js  GetChartType_macroR7.js  GetClassType_macroR7.js
examples/ApiColor/Methods/: GetClassType_macroR7.js  GetRGB_macroR7.js
examples/ApiComment/Methods/: AddReply_macroR7.js  Delete_macroR7.js  GetAuthorName_macroR7.js  GetClassType_macroR7.js  GetId_macroR7.js  GetQuoteText_macroR7.js  GetRepliesCount_macroR7.js  GetReply_macroR7.js  GetText_macroR7.js  GetTimeUTC_macroR7.js  GetTime_macroR7.js  GetUserId_macroR7.js  IsSolved_macroR7.js  RemoveReplies_macroR7.js  SetAuthorName_macroR7.js  SetSolved_macroR7.js  SetText_macroR7.js  SetTimeUTC_macroR7.js  SetTime_macroR7.js  SetUserId_macroR7.js
examples/ApiCommentReply/Methods/: GetAuthorName_macroR7.js  GetClassType_macroR7.js  GetText_macroR7.js  GetTimeUTC_macroR7.js  GetTime_macroR7.js  GetUserId_macroR7.js  SetAuthorName_macroR7.js  SetText_macroR7.js  SetTimeUTC_macroR7.js  SetTime_macroR7.js  SetUserId_macroR7.js
examples/ApiCore/Methods/: GetCategory_macroR7.js  GetClassType_macroR7.js  GetContentStatus_macroR7.js  GetCreated_macroR7.js  GetCreator_macroR7.js  GetDescription_macroR7.js  GetIdentifier_macroR7.js  GetKeywords_macroR7.js  GetLanguage_macroR7.js  GetLastModifiedBy_macroR7.js  GetLastPrinted_macroR7.js  GetModified_macroR7.js  GetRevision_macroR7.js  GetSubject_macroR7.js  GetTitle_macroR7.js  GetVersion_macroR7.js  SetCategory_macroR7.js  SetContentStatus_macroR7.js  SetCreated_macroR7.js  SetCreator_macroR7.js  SetDescription_macroR7.js  SetIdentifier_macroR7.js  SetKeywords_macroR7.js  SetLanguage_macroR7.js  SetLastModifiedBy_macroR7.js  SetLastPrinted_macroR7.js  SetModified_macroR7.js  SetRevision_macroR7.js  SetSubject_macroR7.js  SetTitle_macroR7.js  SetVersion_macroR7.js
examples/ApiCustomProperties/Methods/: Add_macroR7.js  GetClassType_macroR7.js  Get_macroR7.js
examples/ApiDocumentContent/Methods/: AddElement_macroR7.js  GetClassType_macroR7.js  GetElement_macroR7.js  GetElementsCount_macroR7.js  Push_macroR7.js  RemoveAllElements_macroR7.js  RemoveElement_macroR7.js
examples/ApiDrawing/Methods/: GetClassType_macroR7.js  GetHeight_macroR7.js  GetLockValue_macroR7.js  GetParentSheet_macroR7.js  GetRotation_macroR7.js  GetWidth_macroR7.js  SetLockValue_macroR7.js  SetPosition_macroR7.js  (+2 more)
onlyoffice-macro-cli/: CMakeLists.txt  Makefile  README.md
onlyoffice-macro-cli/include/: api_definitions.h  cli_parser.h  duktape_engine.h  js_engine_interface.h  jsc_engine.h  linter.h  linter_rules.h  linter_utils.h  macro_runner.h  syntax_checker.h  v8_engine.h
onlyoffice-macro-cli/src/: api_definitions.cpp  cli_parser.cpp  duktape_engine.cpp  function_rules.cpp  js_engine_factory.cpp  jsc_engine.cpp  linter.cpp  linter_utils.cpp  macro_runner.cpp  main.cpp  mistake_rules.cpp  onlyoffice_rules.cpp  style_rules.cpp  syntax_checker.cpp  syntax_rules.cpp  syntax_rules_old.cpp  v8_engine.cpp  variable_rules.cpp
onlyoffice-macro-cli/tests/: CMakeLists.txt
plugin/: config.json  index.html
plugin/scripts/: code.js
server/: demo.py  full_test.py  readme.md  server.py  simple_ws_test.py  test_client.py  working_test.py
(+836 files in other folders)
